src/parser/generated/SightlyParser.js
/*
 * Copyright 2018 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

// Generated from src/parser/grammar/SightlyParser.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var SightlyParserListener = require('./SightlyParserListener').SightlyParserListener;

    const NullLiteral = require('../htl/nodes/NullLiteral');
    const ArrayLiteral = require('../htl/nodes/ArrayLiteral');
    const NumericConstant = require('../htl/nodes/NumericConstant');
    const StringConstant = require('../htl/nodes/StringConstant');
    const BooleanConstant = require('../htl/nodes/BooleanConstant');
    const ExpressionNode = require('../htl/nodes/ExpressionNode');
    const PropertyAccess = require('../htl/nodes/PropertyAccess');
    const Expression = require('../htl/nodes/Expression');
    const Interpolation = require('../htl/nodes/Interpolation');
    const Identifier = require('../htl/nodes/Identifier');
    const BinaryOperator = require('../htl/nodes/BinaryOperator');
    const BinaryOperation = require('../htl/nodes/BinaryOperation');
    const UnaryOperator = require('../htl/nodes/UnaryOperator');
    const UnaryOperation = require('../htl/nodes/UnaryOperation');
    const TernaryOperation = require('../htl/nodes/TernaryOperation');

var grammarFileName = "SightlyParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, "'${'", null, "'}'", null, "'.'", "'('", 
                     "')'", "'&&'", "'||'", "'!'", "','", "'['", "']'", 
                     "'='", "'@'", "'?'", "':'", "'<'", "'<='", "'>='", 
                     "'>'", "'=='", "'!='" ];

var symbolicNames = [ null, "ESC_EXPR", "EXPR_START", "TEXT_PART", "EXPR_END", 
                      "BOOL_CONSTANT", "DOT", "LBRACKET", "RBRACKET", "AND_OP", 
                      "OR_OP", "NOT_OP", "COMMA", "ARRAY_START", "ARRAY_END", 
                      "ASSIGN", "OPTION_SEP", "TERNARY_Q_OP", "TERNARY_BRANCHES_OP", 
                      "LT", "LEQ", "GEQ", "GT", "EQ", "NEQ", "ID", "INT", 
                      "FLOAT", "COMMENT", "WS", "STRING" ];

var ruleNames =  [ "interpolation", "textFrag", "expression", "optionList", 
                   "option", "exprNode", "binaryOp", "operator", "comparisonTerm", 
                   "comparisonOp", "factor", "term", "field", "simple", 
                   "valueList", "atom", "stringConst" ];

function SightlyParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

SightlyParser.prototype = Object.create(antlr4.Parser.prototype);
SightlyParser.prototype.constructor = SightlyParser;

Object.defineProperty(SightlyParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

SightlyParser.EOF = antlr4.Token.EOF;
SightlyParser.ESC_EXPR = 1;
SightlyParser.EXPR_START = 2;
SightlyParser.TEXT_PART = 3;
SightlyParser.EXPR_END = 4;
SightlyParser.BOOL_CONSTANT = 5;
SightlyParser.DOT = 6;
SightlyParser.LBRACKET = 7;
SightlyParser.RBRACKET = 8;
SightlyParser.AND_OP = 9;
SightlyParser.OR_OP = 10;
SightlyParser.NOT_OP = 11;
SightlyParser.COMMA = 12;
SightlyParser.ARRAY_START = 13;
SightlyParser.ARRAY_END = 14;
SightlyParser.ASSIGN = 15;
SightlyParser.OPTION_SEP = 16;
SightlyParser.TERNARY_Q_OP = 17;
SightlyParser.TERNARY_BRANCHES_OP = 18;
SightlyParser.LT = 19;
SightlyParser.LEQ = 20;
SightlyParser.GEQ = 21;
SightlyParser.GT = 22;
SightlyParser.EQ = 23;
SightlyParser.NEQ = 24;
SightlyParser.ID = 25;
SightlyParser.INT = 26;
SightlyParser.FLOAT = 27;
SightlyParser.COMMENT = 28;
SightlyParser.WS = 29;
SightlyParser.STRING = 30;

SightlyParser.RULE_interpolation = 0;
SightlyParser.RULE_textFrag = 1;
SightlyParser.RULE_expression = 2;
SightlyParser.RULE_optionList = 3;
SightlyParser.RULE_option = 4;
SightlyParser.RULE_exprNode = 5;
SightlyParser.RULE_binaryOp = 6;
SightlyParser.RULE_operator = 7;
SightlyParser.RULE_comparisonTerm = 8;
SightlyParser.RULE_comparisonOp = 9;
SightlyParser.RULE_factor = 10;
SightlyParser.RULE_term = 11;
SightlyParser.RULE_field = 12;
SightlyParser.RULE_simple = 13;
SightlyParser.RULE_valueList = 14;
SightlyParser.RULE_atom = 15;
SightlyParser.RULE_stringConst = 16;

function InterpolationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_interpolation;
    this.interp = null
    this._textFrag = null; // TextFragContext
    this._expression = null; // ExpressionContext
    return this;
}

InterpolationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InterpolationContext.prototype.constructor = InterpolationContext;

InterpolationContext.prototype.textFrag = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(TextFragContext);
    } else {
        return this.getTypedRuleContext(TextFragContext,i);
    }
};

InterpolationContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

InterpolationContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterInterpolation(this);
	}
};

InterpolationContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitInterpolation(this);
	}
};




SightlyParser.InterpolationContext = InterpolationContext;

SightlyParser.prototype.interpolation = function() {

    var localctx = new InterpolationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, SightlyParser.RULE_interpolation);
     localctx.interp =  new Interpolation() 
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 42;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SightlyParser.ESC_EXPR) | (1 << SightlyParser.EXPR_START) | (1 << SightlyParser.TEXT_PART))) !== 0)) {
            this.state = 40;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case SightlyParser.ESC_EXPR:
            case SightlyParser.TEXT_PART:
                this.state = 34;
                localctx._textFrag = this.textFrag();
                 localctx.interp.addText(localctx._textFrag.str); 
                break;
            case SightlyParser.EXPR_START:
                this.state = 37;
                localctx._expression = this.expression();
                 localctx.interp.addExpression(localctx._expression.expr.withRawText((localctx._expression===null ? null : this._input.getText(new antlr4.Interval(localctx._expression.start,localctx._expression.stop))))); 
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 44;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TextFragContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_textFrag;
    this.str = null
    this._TEXT_PART = null; // Token
    this._ESC_EXPR = null; // Token
    return this;
}

TextFragContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TextFragContext.prototype.constructor = TextFragContext;

TextFragContext.prototype.TEXT_PART = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SightlyParser.TEXT_PART);
    } else {
        return this.getToken(SightlyParser.TEXT_PART, i);
    }
};


TextFragContext.prototype.ESC_EXPR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SightlyParser.ESC_EXPR);
    } else {
        return this.getToken(SightlyParser.ESC_EXPR, i);
    }
};


TextFragContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterTextFrag(this);
	}
};

TextFragContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitTextFrag(this);
	}
};




SightlyParser.TextFragContext = TextFragContext;

SightlyParser.prototype.textFrag = function() {

    var localctx = new TextFragContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, SightlyParser.RULE_textFrag);
     let sb = ''; 
    try {
        this.state = 59;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SightlyParser.TEXT_PART:
            this.enterOuterAlt(localctx, 1);
            this.state = 47; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 45;
            		localctx._TEXT_PART = this.match(SightlyParser.TEXT_PART);
            		 sb += (localctx._TEXT_PART===null ? null : localctx._TEXT_PART.text); 
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 49; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
             localctx.str =  sb 
            break;
        case SightlyParser.ESC_EXPR:
            this.enterOuterAlt(localctx, 2);
            this.state = 54; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 52;
            		localctx._ESC_EXPR = this.match(SightlyParser.ESC_EXPR);
            		 sb += (localctx._ESC_EXPR===null ? null : localctx._ESC_EXPR.text); 
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 56; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
             localctx.str =  sb.substring(1) 
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_expression;
    this.expr = null
    this._exprNode = null; // ExprNodeContext
    this._optionList = null; // OptionListContext
    return this;
}

ExpressionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionContext.prototype.constructor = ExpressionContext;

ExpressionContext.prototype.EXPR_START = function() {
    return this.getToken(SightlyParser.EXPR_START, 0);
};

ExpressionContext.prototype.EXPR_END = function() {
    return this.getToken(SightlyParser.EXPR_END, 0);
};

ExpressionContext.prototype.exprNode = function() {
    return this.getTypedRuleContext(ExprNodeContext,0);
};

ExpressionContext.prototype.OPTION_SEP = function() {
    return this.getToken(SightlyParser.OPTION_SEP, 0);
};

ExpressionContext.prototype.optionList = function() {
    return this.getTypedRuleContext(OptionListContext,0);
};

ExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterExpression(this);
	}
};

ExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitExpression(this);
	}
};




SightlyParser.ExpressionContext = ExpressionContext;

SightlyParser.prototype.expression = function() {

    var localctx = new ExpressionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, SightlyParser.RULE_expression);
     let exNode = NullLiteral.INSTANCE; let opts = {}; 
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this.match(SightlyParser.EXPR_START);
        this.state = 65;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SightlyParser.BOOL_CONSTANT) | (1 << SightlyParser.LBRACKET) | (1 << SightlyParser.NOT_OP) | (1 << SightlyParser.ARRAY_START) | (1 << SightlyParser.ID) | (1 << SightlyParser.INT) | (1 << SightlyParser.FLOAT) | (1 << SightlyParser.STRING))) !== 0)) {
            this.state = 62;
            localctx._exprNode = this.exprNode();
            exNode = localctx._exprNode.node;
        }

        this.state = 71;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SightlyParser.OPTION_SEP) {
            this.state = 67;
            this.match(SightlyParser.OPTION_SEP);
            this.state = 68;
            localctx._optionList = this.optionList();
            opts = localctx._optionList.options;
        }

        this.state = 73;
        this.match(SightlyParser.EXPR_END);
         localctx.expr =  new Expression(exNode, opts) 
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OptionListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_optionList;
    this.options = null
    this.f = null; // OptionContext
    this.r = null; // OptionContext
    return this;
}

OptionListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OptionListContext.prototype.constructor = OptionListContext;

OptionListContext.prototype.option = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OptionContext);
    } else {
        return this.getTypedRuleContext(OptionContext,i);
    }
};

OptionListContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(SightlyParser.COMMA);
    } else {
        return this.getToken(SightlyParser.COMMA, i);
    }
};


OptionListContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterOptionList(this);
	}
};

OptionListContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitOptionList(this);
	}
};




SightlyParser.OptionListContext = OptionListContext;

SightlyParser.prototype.optionList = function() {

    var localctx = new OptionListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, SightlyParser.RULE_optionList);
     localctx.options =  {} 
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        localctx.f = this.option();
         localctx.options[localctx.f.name] = (localctx.f.value != null) ? localctx.f.value : NullLiteral.INSTANCE; 
        this.state = 84;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===SightlyParser.COMMA) {
            this.state = 78;
            this.match(SightlyParser.COMMA);
            this.state = 79;
            localctx.r = this.option();
             localctx.options[localctx.r.name]=localctx.r.value; 
            this.state = 86;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OptionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_option;
    this.name = null
    this.value = null
    this._ID = null; // Token
    this._exprNode = null; // ExprNodeContext
    return this;
}

OptionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OptionContext.prototype.constructor = OptionContext;

OptionContext.prototype.ID = function() {
    return this.getToken(SightlyParser.ID, 0);
};

OptionContext.prototype.ASSIGN = function() {
    return this.getToken(SightlyParser.ASSIGN, 0);
};

OptionContext.prototype.exprNode = function() {
    return this.getTypedRuleContext(ExprNodeContext,0);
};

OptionContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterOption(this);
	}
};

OptionContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitOption(this);
	}
};




SightlyParser.OptionContext = OptionContext;

SightlyParser.prototype.option = function() {

    var localctx = new OptionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, SightlyParser.RULE_option);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 87;
        localctx._ID = this.match(SightlyParser.ID);
         localctx.name =  (localctx._ID===null ? null : localctx._ID.text) 
        this.state = 93;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===SightlyParser.ASSIGN) {
            this.state = 89;
            this.match(SightlyParser.ASSIGN);
            this.state = 90;
            localctx._exprNode = this.exprNode();
             localctx.value =  localctx._exprNode.node 
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprNodeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_exprNode;
    this.node = null
    this.condition = null; // BinaryOpContext
    this.thenBranch = null; // BinaryOpContext
    this.elseBranch = null; // BinaryOpContext
    this._binaryOp = null; // BinaryOpContext
    return this;
}

ExprNodeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprNodeContext.prototype.constructor = ExprNodeContext;

ExprNodeContext.prototype.TERNARY_Q_OP = function() {
    return this.getToken(SightlyParser.TERNARY_Q_OP, 0);
};

ExprNodeContext.prototype.TERNARY_BRANCHES_OP = function() {
    return this.getToken(SightlyParser.TERNARY_BRANCHES_OP, 0);
};

ExprNodeContext.prototype.binaryOp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BinaryOpContext);
    } else {
        return this.getTypedRuleContext(BinaryOpContext,i);
    }
};

ExprNodeContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterExprNode(this);
	}
};

ExprNodeContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitExprNode(this);
	}
};




SightlyParser.ExprNodeContext = ExprNodeContext;

SightlyParser.prototype.exprNode = function() {

    var localctx = new ExprNodeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, SightlyParser.RULE_exprNode);
    try {
        this.state = 105;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 95;
            localctx.condition = this.binaryOp();
            this.state = 96;
            this.match(SightlyParser.TERNARY_Q_OP);
            this.state = 97;
            localctx.thenBranch = this.binaryOp();
            this.state = 98;
            this.match(SightlyParser.TERNARY_BRANCHES_OP);
            this.state = 99;
            localctx.elseBranch = this.binaryOp();
            localctx.node =  new TernaryOperation(localctx.condition.node, localctx.thenBranch.node, localctx.elseBranch.node)
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 102;
            localctx._binaryOp = this.binaryOp();
            localctx.node =  localctx._binaryOp.node
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BinaryOpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_binaryOp;
    this.node = null
    this.left = null; // ComparisonTermContext
    this._operator = null; // OperatorContext
    this.right = null; // ComparisonTermContext
    return this;
}

BinaryOpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BinaryOpContext.prototype.constructor = BinaryOpContext;

BinaryOpContext.prototype.comparisonTerm = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ComparisonTermContext);
    } else {
        return this.getTypedRuleContext(ComparisonTermContext,i);
    }
};

BinaryOpContext.prototype.operator = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OperatorContext);
    } else {
        return this.getTypedRuleContext(OperatorContext,i);
    }
};

BinaryOpContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterBinaryOp(this);
	}
};

BinaryOpContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitBinaryOp(this);
	}
};




SightlyParser.BinaryOpContext = BinaryOpContext;

SightlyParser.prototype.binaryOp = function() {

    var localctx = new BinaryOpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, SightlyParser.RULE_binaryOp);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        localctx.left = this.comparisonTerm();
         localctx.node =  localctx.left.node 
        this.state = 115;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===SightlyParser.AND_OP || _la===SightlyParser.OR_OP) {
            this.state = 109;
            localctx._operator = this.operator();
            this.state = 110;
            localctx.right = this.comparisonTerm();
             localctx.node =  new BinaryOperation(localctx._operator.op, localctx.node, localctx.right.node) 
            this.state = 117;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function OperatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = SightlyParser.RULE_operator;
    this.op = null
    return this;
}

OperatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OperatorContext.prototype.constructor = OperatorContext;

OperatorContext.prototype.AND_OP = function() {
    return this.getToken(SightlyParser.AND_OP, 0);
};

OperatorContext.prototype.OR_OP = function() {
    return this.getToken(SightlyParser.OR_OP, 0);
};

OperatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.enterOperator(this);
	}
};

OperatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof SightlyParserListener ) {
        listener.exitOperator(this);
	}
};




SightlyParser.OperatorContext = OperatorContext;

SightlyParser.prototype.operator = function() {

    var localctx = new OperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, SightlyParser.RULE_operator);
    try {
        this.state = 122;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case SightlyParser.AND_OP:
            this.enterOuterAlt(localctx, 1);
            this.state = 118;
            this.match(SightlyParser.AND_OP);
             localctx.op =  BinaryOperator.AND 
            break;
        case SightlyParser.OR_OP:
            this.enterOuterAlt(localctx, 2);
            this.state = 120;
            this.match(SightlyParser.OR_OP);
             localctx.op =  BinaryOperator.OR 
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
